--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 alt=""> </div>
     </section>
     <section class="about" id="about">
-        <div class="image" data-aos="fade-right"> <img src="images/13.jpg" alt="" width="650px"> </div>
+        <div class="image" data-aos="fade-right"> <img src="images/13.png" alt="" width="650px"> </div>
         <div class="content">
             <h3>About</h3>
             <p data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500">My name is Navdeep and I'm a web
